@@ -1,6 +1,7 @@
 package com.xlbs.apiservice.interceptor;
 
-import com.xlbs.commutils.utils.RequestContextUtils;
+import com.xlbs.constantjar.RequestContextUtils;
+import com.xlbs.constantjar.SessionConstant;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
@@ -18,14 +19,12 @@ public class WebMvcConfig extends WebMvcConfigurerAdapter {
         registry.addInterceptor(new HandlerInterceptorAdapter() {
             @Override
             public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-                String uri = request.getRequestURI();
-                System.out.println("==>WebMvcConfig中的拦截器URI: "+uri );
-//                if(!uri.contains("/sysUser")){
-//                    Long userId = new Long(request.getHeader(SessionConstant.USER_ID));
-//                    String userName = request.getHeader(SessionConstant.USER_NAME);
-//                    String userNo = request.getHeader(SessionConstant.USER_NO);
-//                    RequestContextUtils.set(userId, userName, userNo);
-//                }
+                System.out.println("==>WebMvcConfig中的拦截器URI: "+request.getRequestURI() );
+                Long userId = new Long(request.getHeader(SessionConstant.USER_ID));
+                String username = request.getHeader(SessionConstant.USERNAME);
+                String name = request.getHeader(SessionConstant.NAME);
+                Integer userType = Integer.valueOf(request.getHeader(SessionConstant.USER_TYPE));
+                RequestContextUtils.set(userId, username, name, userType);
                 return true;
             }
 
